project (${WIKI}Video)

if(NOT WikiExamples_BINARY_DIR)
find_package(VTK REQUIRED)
if(NOT VTK_USE_RENDERING)
  message(FATAL_ERROR "Example ${PROJECT_NAME} requires VTK_USE_RENDERING.")
endif()
include(${VTK_USE_FILE})
endif()

if(WIN32)
  if(VTK_USE_VIDEO_FOR_WINDOWS)
    set(Kit_SRCS ${Kit_SRCS} vtkAVIWriter.cxx)
    set(KIT_LIBS ${KIT_LIBS} vfw32)
  endif()
endif()

# if(VTK_USE_VIDEO_FOR_WINDOWS)
#   add_executable(AVI ${EXECUTABLE_FLAG} AVI.cxx)
#   target_link_libraries(AVI vtkHybrid ${KIT_LIBS})
# endif()

if (VTK_USE_MPEG2_ENCODER)
  add_executable(MPEG2 ${EXECUTABLE_FLAG} MPEG2.cxx)
  target_link_libraries(MPEG2 ${KIT_LIBS})
else ()
  set(SKIP "Cxx/Video/MPEG2")
  set(REQUIRE "VTK_USE_MPEG2_ENCODER")
  message(STATUS "VTKWikiExamples: ${SKIP} requires ${REQUIRE} and will not be built")
endif ()

if (VTK_USE_FFMPEG_ENCODER)
  add_executable(FFMPEG ${EXECUTABLE_FLAG} FFMPEG.cxx)
  target_link_libraries(FFMPEG ${KIT_LIBS})
else ()
  set(SKIP "Cxx/Video/FFMPEG")
  set(REQUIRE "VTK_USE_FFMPEG_ENCODER")
  message(STATUS "VTKWikiExamples: ${SKIP} requires ${REQUIRE} and will not be built")
endif ()

if(VTK_USE_OGGTHEORA_ENCODER)
  add_executable(OggTheora ${EXECUTABLE_FLAG} OggTheora.cxx)
  target_link_libraries(OggTheora ${KIT_LIBS})
else ()
  set(SKIP "Cxx/Video/OggTheora")
  set(REQUIRE "VTK_USE_OGGTHEORA_ENCODER")
  message(STATUS "VTKWikiExamples: ${SKIP} requires ${REQUIRE} and will not be built")
endif()
